tests/toylang/neg/001443_mutation.toylang
program a = { var a : int program; } .
